--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -17,10 +17,10 @@
 <!--<div class="page__hero&#45;&#45;overlay" style="background-image: url('images/lp_images/sharon-mccutcheon-unsplash.jpg');">-->
     <div class="wrapper" style="text-align:center;">
         <h1 class="page__title" itemprop="headline" style="">
-            Cisco Network Convergence System 5500 Series
+            SONiC
         </h1>
         <p class="page__lead" style="font-size: 0.9em;text-align:center;">
-            Get familiar with NCS 5500 product family and dive into details.
+            Get familiar with SONiC and dive into details
         </p>
         <p>
             <a href="{{ base_path }}/blogs/" class="btn btn--large">Blogs</a>
